--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,5 @@ version: '${project.version}'
 main: dev.imgqbbo.straightpunch.StraightPunch
 authors: [ ImGqbbo ]
 description: Feature rich punch plugin made to fix the vanilla punch
+commands:
+  punch:
